--- a/homepage.html
+++ b/homepage.html
@@ -6,10 +6,10 @@
         <link rel = "stylesheet" href = "style.css">
     </head>
     <body>
-         <nav>
-            <a href="tables.html">Tables!</a> |
-            <a href="lists.html">Lists!</a> |
-            <a href="image.html">Image!</a> |
+         <nav class="navigation">
+            <a href="tables.html">Tables!</a>
+            <a href="lists.html">Lists!</a>
+            <a href="image.html">Image!</a>
             <a href="page5">Page5!</a>
         </nav>
         <div id = "top" class = homepage>
