Leave work Update

--- a/homepage.html
+++ b/homepage.html
@@ -2,7 +2,7 @@
 
 <html>
     <head>
-        <title>Xavier G. Project0</title>
+        <title>Homepage</title>
         <link rel = "stylesheet" href = "style.css">
     </head>
     <body>
