--- a/tables.html
+++ b/tables.html
@@ -6,14 +6,53 @@
         <link rel = "stylesheet" href = "style.css">
     </header>
     <body>
-        <nav>
+        <nav class="navigation">
             <a href="homepage.html">Homepage!</a>
             <a href="lists.html">Lists!</a>
             <a href="image.html">Image!</a>
             <a href="page5">Page5!</a>
         </nav>
-        <th></th>
-
+        <table class="tabledata">
+            <tr>
+                <th>School Name</th>
+                <th>Location</th>
+                <th>Years</th>
+            </tr>
+            <tr>
+                <td>Cunningham Elementry</td>
+                <td>Austin, TX</td>
+                <td>1990 - 1996</td>
+            </tr>
+            <tr>
+                <td>Dahlstrom Middle School</td>
+                <td>Buda, TX</td>
+                <td>1996 - 1997</td>
+            </tr>    
+            <tr>
+                <td>Barton Middle School</td>
+                <td>Buda, TX</td>
+                <td>1998 - 2000</td>
+            </tr>    
+            <tr>
+                <td>Hays High School</td>
+                <td>Buda, TX</td>
+                <td>2000 - 2004</td>
+            </tr>    
+            <tr>
+                <td>University of Texas San Antonio</td>
+                <td>San Antonio, TX</td>
+                <td>2004 - 2005</td>
+            </tr>    
+            <tr>
+                <td>Austin Community College</td>
+                <td>Austin, TX</td>
+                <td>2005 - 2006</td>
+            </tr>
+            <tr>
+                <td>Texas State University</td>
+                <td>San Marcos, TX</td>
+                <td>2006 - 2010</td>
+            </tr>
+        </table>
     </body>
-
 </html>
