--- a/image.html
+++ b/image.html
@@ -2,7 +2,7 @@
 
 <html>
     <header>
-        <title>Tables Page</title>
+        <title>Image Page</title>
         <link rel = "stylesheet" href = "style.css">
     </header>
     <body>
@@ -11,5 +11,7 @@
             <a href="tables.html">Table!</a>
             <a href="lists.html">List!</a>
         </nav>
+        <img id="flower" src="flower.jpg" alt="Photo of sunflower" height="25%" width="50%">
+        <h4 class="photo_caption">Photo of a sunflower in my back yard.</h4>
     </body>
 </html>       
