--- a/tables.html
+++ b/tables.html
@@ -2,7 +2,7 @@
 
 <html>
     <header>
-        <title>Tables Page</title>
+        <title>Table Page</title>
         <link rel = "stylesheet" href = "style.css">
     </header>
     <body>
@@ -11,6 +11,7 @@
             <a href="lists.html">Lists!</a>
             <a href="image.html">Image!</a>
         </nav>
+        <h1 class="above_table">My Education</h1>
         <table class="tabledata">
             <tr>
                 <th>School Name</th>
