--- a/lists.html
+++ b/lists.html
@@ -2,7 +2,7 @@
 
 <html>
     <header>
-        <title>Tables Page</title>
+        <title>List Page</title>
         <link rel = "stylesheet" href = "style.css">
     </header>
     <body>
