--- a/homepage.html
+++ b/homepage.html
@@ -10,6 +10,7 @@
             <a href="tables.html">Tables!</a>
             <a href="lists.html">Lists!</a>
             <a href="image.html">Image!</a>
+            <a href="bootstrap.html">Bootstrap!</a>
         </nav>
         <div id = "top" class = homepage>
             <h1>Welcome to the homepage of my site.</h1>
