--- a/image.html
+++ b/image.html
@@ -10,6 +10,7 @@
             <a href="homepage.html">Homepage!</a>
             <a href="tables.html">Table!</a>
             <a href="lists.html">List!</a>
+            <a href="bootstrap.html">Bootstrap!</a>
         </nav>
         <img id="flower" src="flower.jpg" alt="Photo of sunflower" height="25%" width="50%">
         <h4 class="photo_caption">Photo of a sunflower in my back yard.</h4>
