--- a/tables.html
+++ b/tables.html
@@ -10,6 +10,7 @@
             <a href="homepage.html">Homepage!</a>
             <a href="lists.html">Lists!</a>
             <a href="image.html">Image!</a>
+            <a href="bootstrap.html">Bootstrap!</a>
         </nav>
         <h1 class="above_table">My Education</h1>
         <table class="tabledata">
