--- a/lists.html
+++ b/lists.html
@@ -10,6 +10,7 @@
             <a href="homepage.html">Homepage!</a>
             <a href="tables.html">Table!</a>
             <a href="image.html">Image!</a>
+            <a href="bootstrap.html">Bootstrap!</a>
         </nav>
         <h1>Grocery List</h1>
         <ul>
@@ -25,7 +26,6 @@
             <li>Jelly</li>
             <li>Tortillas</li>
             <li>Sardines</li>
-            <li>Baby Wipes</li>
         </ul>
     </body>
  </html>   
