--- a/bootstrap.html
+++ b/bootstrap.html
@@ -1,4 +1,4 @@
-<!DOCTYPE HTML>
+<!DOCTYPE html>
 <html lang="en">
     <head>
         <!-- Required meta tags -->
@@ -6,17 +6,18 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
         <!-- Bootstrap CSS and local stylesheet -->
+        <link rel="stylesheet" href="./style/nav_style.css">
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
         <link rel= "stylesheet" href= "style.css">
         <title>Bootstrap Grid Demo</title>
-    </head>
-    <body>
-        <nav class="navigation">
+        <nav>
             <a href="homepage.html">Homepage!</a>
             <a href="tables.html">Table!</a>
             <a href="lists.html">List!</a>
             <a href="image.html">Image!</a>
         </nav>
+    </head>
+    <body>
         <div class="container">
             <div class="row">
                 <div class="col-sm">
