--- a/homepage.html
+++ b/homepage.html
@@ -4,9 +4,10 @@
     <head>
         <title>Homepage</title>
         <link rel = "stylesheet" href = "style.css">
+        <link rel="stylesheet" href="./style/nav_style.css">
     </head>
     <body>
-         <nav class="navigation">
+         <nav>
             <a href="tables.html">Tables!</a>
             <a href="lists.html">Lists!</a>
             <a href="image.html">Image!</a>
