--- a/lists.html
+++ b/lists.html
@@ -4,9 +4,10 @@
     <header>
         <title>List Page</title>
         <link rel = "stylesheet" href = "style.css">
+        <link rel="stylesheet" href="./style/nav_style.css">
     </header>
     <body>
-        <nav class="navigation">
+        <nav>
             <a href="homepage.html">Homepage!</a>
             <a href="tables.html">Table!</a>
             <a href="image.html">Image!</a>
