--- a/lists.html
+++ b/lists.html
@@ -15,7 +15,7 @@
         </nav>
         <h1>Grocery List</h1>
         <ul>
-            <li>Grassfeed Ground Beef</li>
+            <li>Ground Beef</li>
             <li>Pork Chops</li>
             <li>Wild Rice</li>
             <li>Toothpaste</li>
@@ -26,7 +26,9 @@
             <li>Sausage</li>
             <li>Jelly</li>
             <li>Tortillas</li>
-            <li>Sardines</li>
+            <li>Cereal</li>
+            <li>Kombucha</li>
+            <li>Vegtables</li>
         </ul>
     </body>
  </html>   
